<resources>
    <string name="app_name">Checkup</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_doctor_reg">Registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_number">Registration Number</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="diagnostic_center_s_name">Diagnostic center\'s Name</string>
    <string name="speciality">MBBS, FCPS (Medicine)</string>
    <string name="rating_5_5">Rating: 5/5</string>
    <string name="visiting_fee_500_bdt">Visiting Fee: 500 BDT</string>
    <string name="search_title">Search</string>
    <string name="title_activity_login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="contact">Contact</string>
    <string name="icon_name">Icon Name</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_show_doctors">Doctors</string>
    <string name="title_activity_show_diagnostics">Diagnostics</string>
    <string name="title_activity_hospitals">Hospitals</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_ambulances">Ambulances</string>
    <string name="title_activity_blood_banks">Blood Banks</string>
    <string name="property">Property</string>
    <string name="value">Value</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="quote">Quote</string>
    <string name="health_tips">Health Tips</string>
    <string name="demo_headline">প্রাথমিক চিকিৎসা বলতে আমরা কি বুঝি ?</string>
    <string name="demo_news">প্রাথমিক চিকিৎসা হচ্ছে ডাক্তারী চিকিৎসার পূর্বে রােগী বা আহত ব্যক্তির অবস্থা যাতে খারাপের দিকে না যায় বা অবনতি না ঘটে তার জন্য ঘটনাস্থলে তাৎক্ষনিকভাবে যে চিকিৎসা প্রদান করা হয় তাকেই প্রাথমিক চিকিৎসা বলে।</string>
    <string-array name="quote_array">
        <item>Sugary drinks are among the most fattening items you can put into your body.</item>
        <item>Despite being high in fat, nuts are incredibly nutritious and healthy.</item>
        <item>Processed junk food is incredibly unhealthy.</item>
        <item>Coffee is very healthy.</item>
        <item>Fish is a great source of high-quality protein and healthy fat.</item>
        <item>The importance of getting enough quality sleep cannot be overstated.</item>
        <item>Good ways to improve gut health include eating probiotic foods like yogurt and sauerkraut.</item>
        <item>The optimal time to drink it is before meals.</item>
        <item>When you cook meat, make sure not to overcook or burn it.</item>
        <item>Avoid bright lights before sleep.</item>
        <item>Take vitamin D3 if you don’t get much sun exposure.</item>
        <item>People who eat the most vegetables and fruits live longer and have a lower risk of heart disease.</item>
        <item>Sufficient protein intake has also been shown to lower blood sugar and blood pressure levels.</item>
        <item>Doing aerobic exercise, also called cardio, is one of the best things you can do for your mental and physical health.</item>
        <item>Don’t smoke or do drugs, and only drink in moderation.</item>
        <item>Extra virgin olive oil is one of the healthiest vegetable oils.</item>
        <item>Added sugar is one of the worst ingredients in the modern diet, as large amounts can harm your metabolic health.</item>
        <item>Refined carbs are linked to overeating and numerous metabolic diseases.</item>
        <item>Lifting weights is one of the best things you can do to strengthen your muscles and improve your body composition.</item>
        <item>Artificial trans fats are harmful, man-made fats that are strongly linked to inflammation and heart disease.</item>
        <item>Due to their powerful benefits, you should try to include as many herbs and spices as possible in your diet.</item>
        <item>Social relationships are incredibly important not only for your mental well-being but also your physical health.</item>
        <item>The only way to know exactly how many calories you eat is to weigh your food and use a nutrition tracker.</item>
        <item>If you have excess belly fat, get rid of it.</item>
        <item>Diets are notoriously ineffective and rarely work well in the long term.</item>
        <item>Whole eggs are so nutritious that they’re often termed “nature’s multivitamin.”</item>
    </string-array>
    <string name="tips_head_1">স্নায়ুবিক আঘাত (Shock)/ফিট বলতে আমরা কি বুঝি ?</string>
    <string name="tips_news_1">আঘাত, তীব্র ব্যথা, দীর্ঘক্ষণ দাড়িয়ে থাকলে পায়ে রক্ত জমে রক্ত সঞ্চালনের যে
        অসুবিধার সৃষ্টি হয় তাকেই স্নায়ুবিক আঘাত বা ফিট বলে।
        \n\n<b>করনীয়</b>
        \n(ক) প্রথমেই রােগীকে সমান জায়াগায় (মেঝেতে) পা উচু করে শােয়াতে হবে। এভাবে কিছুক্ষণ শুয়ে থাকলে
        অধিকাংশ ক্ষেত্রে রােগীর জ্ঞান ফিরে আসে। তবে রােগীর যদি খিচুনি হয় তাহলে কাপড়ের টুকরা/রুমাল মুখের মধ্যে
        দিতে হবে যেন জিহ্বায় কামড় না লাগে। এর পর ডাক্তারের নিকট নিয়ে আসতে হবে।
        \n(খ) ঘাড়, বুক ও কোমরের কাপড় ঢিলা করে দিন।
        \n(গ) উৎসাহ জনক কথা বলে আহতের মনে সাহসের সঞ্চার করুন।</string>
    <string name="tips_head_2">দাহ ও ঝলসানাে ক্ষত (Burns and Scalds) বলতে আমরা কি বুঝি ?</string>
    <string name="tips_news_2">শুস্ক তাপে, বিদ্যুৎ প্রবাহ, ঘর্ষনে রাসায়নিক পদার্থে বা বিকিরণে পুড়ে যাওয়াকে
        দাহ বলে। আদ্র তাপে যেমন-ফুটন্ত পানি। বা অন্য কোন গরম পদার্থের সংস্পর্শে এসে পুড়ে যাওয়াকে ঝলসানাে বলে।
        \n\n<b>করনীয়</b>
        \n((ক) দাহ বা ঝলসানাে রােগীর ক্ষত অংশে এমনভাবে ধুয়ে ফেলুন যাতে পতিত ঠান্ডা পানি ধীরে ধীরে ক্ষতের
        উপর দিয়ে গড়িয়ে যায়, এভাবে যতক্ষণ ক্ষস্থানের জ্বালা-যন্ত্রণা না কমে এবং ক্ষতস্থানে গরমভাব না কমে ততক্ষণ
        ঠান্ডা পানি দিতে হবে অথবা ক্ষত অংশকে পানিতে ডুবিয়ে রাখুন।
        \n(খ) পরিস্কার জীবানুমুক্ত ব্যান্ডেজ বা কাপড় দিয়ে ক্ষতস্থান হালকা করে বেঁধে দিতে হবে।
        \n(গ) আহত ব্যক্তির যদি জ্ঞান হারিয়ে ফেলে তবে তাড়াতাড়ি হাসপাতালে প্রেরনের ব্যবস্থা সহ শ্বাস-প্রস্বাসের ব্যবস্থা করতে হবে।
    </string>
    <string name="tips_head_3">রক্তক্ষরণে (Hemorrhage) করনীয় কি ?</string>
    <string name="tips_news_3">
        (ক) পরিস্কার কাপড় অথবা ব্যান্ডেজ দিয়ে চাপ দিয়ে ক্ষতস্থান চেপে ধরুন।
        \n(খ) যে অঙ্গ হতে রক্ত নির্গত হচ্ছে তা উচু করে রাখুন।
        \n(গ) আঠালাে ব্যান্ডেজের সাহায্যে রক্তপাত বন্ধ করুন।
        \n(ঘ) প্রয়ােজন বােধে টুনিকেট ব্যবহার করে রক্তপাত বন্ধ করুন।
        \n(ঙ) কখনও ক্ষতস্থান খােলা রাখা যাবে না।
    </string>
    <string name="tips_head_4">ধোঁয়ায় শ্বাস রােধের চিকিৎসা কি ?</string>
    <string name="tips_news_4">ধোয়ায় আটকে গেলে প্রথমে আত্মরক্ষার প্রয়ােজন, তারপর দুর্ঘটনাস্থল থেকে রােগীকে
        স্থানান্তর করতে হবে। ভেজা তােয়ালে, রুমাল বা কাপড়ের টুকরা দিয়ে নিজের মুখ ও নাক বেঁধে অথবা ফেসমাস্ক
        লাগিয়ে উদ্ধারের জন্য অগ্রসর হবে তারপর আহত রােগীকে আলো বাতাসের ব্যবস্থা করতে হবে।
    </string>
    <string name="tips_head_5">চোখের মধ্যে কোন কিছু ঢুকলে প্রাথমিক চিকিৎসা কি ?</string>
    <string name="tips_news_5">
        (ক) যদি পানির ঝাপটা (কয়েক বার) দিয়ে বাইরের বস্তুটি না সরে যায় তাহলে ডাক্তারের নিকট নিয়ে আসবেন।
        \n(খ) কোনক্রমে রােগেীকে চোখ ডলতে দেওয়া যাবে না।
        \n(গ) যদি বাহিরের কোন কিছু প্রবেশ করে চোখের গােলকে একধারে আটকে থাকে তবে তা পাতলা ভেজা কাপড়
        বা রুমাল দিয়ে বের করতে হবে।
    </string>
    <string name="tips_head_6">কানে কিছু প্রবেশ করলে করনীয় কি ?</string>
    <string name="tips_news_6">অনেক সময় কানের ছিদ্র পথে ছােট কীট পতঙ্গ অথবা ময়লা প্রবেশ করে তবে কানের
        ছিদ্র পথে । অলিভয়েল বা নারিকেল তেল দিতে হবে। তবে তেল দেয়ার আগে অবশ্যই নিশ্চিত হবে রােগীর কানের
        পর্দায় কোন ছিদ্র আছে কিনা।</string>
    <string name="tips_head_7">প্রাথমিক চিকিৎসার কিছু পদ্ধতি</string>
    <string name="tips_news_7">(ক) ক্ষিপ্র গতিতে মাথা ঠান্ডা রেখে আগের কাজ আগে এবং পরের কাজ পরে এ নীতিতে কাজ করতে হবে।
        \n(খ) শ্বাস-প্রশাসের বিঘ্ন দেখা দিলে কৃত্রিম উপায়ে দ্রুত শ্বাস-প্রশ্বাসের ব্যবস্থা করতে হবে।
        \n(গ) রক্তক্ষরণ হলে দ্রুত রক্ত ক্ষরণ বন্ধের ব্যবস্থা নিতে হবে।
        \n(ঘ) স্নায়ুবিক আঘাতের চিকিৎসা সঙ্গে সঙ্গে করতে হবে।
        \n(ঙ) রােগী বা আহত ব্যক্তিকে যত তাড়াতাড়ি সম্ভব ডাক্তারের নিকট নেওয়ার ব্যবস্থা করতে হবে।
        \n(চ) নিয়মিত পড়াশুনা ও মহড়া দিয়ে প্রাথমিক চিকিৎসা দেয়ার জন্য নিজেকে প্রস্তুত থাকতে হবে।
    </string>
    <string name="tips_head_8">প্রাথমিক চিকিৎসায় করণীয়</string>
</resources>